bld/wipfc/test/neg/neg7.ipf
:userdoc.
:title.Negative 7
:docprof.
:h1.Cannot open image file
:p.The file "not_present&per.bmp" does not exist&per.
:artwork name="not_present.bmp".
:euserdoc.
